--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
   <body>
     <div class="bar">
-      <div class="page selected">Home</div>
-      <div class="page">Settings</div>
+      <div class="title">Instabot</div>
     </div>
 
     <div class="content">
