--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
           </div>
         </div>
         <div class="run">
-          <button type="button" class="btn btn-success btn-lg">Start</button>
-          <button type="button" class="btn btn-danger btn-lg">Stop</button>
+          <button type="button" id="startBtn" class="btn btn-success btn-lg">Start</button>
+          <button type="button" id="stopBtn" class="btn btn-danger btn-lg">Stop</button>
         </div>
       </div>
 
@@ -106,4 +106,5 @@
       </ul>
     </div>
   </body>
+  <script src="renderer.js"></script>
 </html>
