--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
             <input type="text" class="form-control" id="comments" placeholder="Comment, Comment2, Comment3" />
           </div>
         </div>
-        <div class="path"><input type="file" id="fileBtn" /></div>
+        <div class="path">
+          <input type="file" id="path" />
+          <div id="showPath"></div>
+        </div>
         <div class="save"><button type="button" id="saveConfigBtn" class="btn btn-primary btn-sm">Save Config</button></div>
         <div class="run">
           <button type="button" id="startBtn" class="btn btn-success btn-lg">Start</button>
