--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
             <label class="form-check-label">Comment</label>
           </div>
         </div>
+        <div class="login">
+          <div class="col-sm-2">
+            <label for="hashtagsInput">Username</label>
+            <input type="text" class="form-control" id="username" placeholder="Username" />
+          </div>
+          <div class="col-sm-2">
+            <label for="hashtagsInput">Password</label>
+            <input type="password" class="form-control" id="password" placeholder="Password" />
+          </div>
+        </div>
         <div class="pages">
           <div class="col-sm-10">
             <label for="pagesInput">Pages</label>
